--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,7 @@ VITE_TELEGRAM_BOT_TOKEN=8034254529:AAHzoq-bo7WLAXedNcYJwNa1WuDhg72A8kc
 # Get your chat ID by messaging @userinfobot on Telegram
 VITE_TELEGRAM_CHAT_ID=142165724
 
-# Firebase Configuration
-# Get these from your Firebase Console > Project Settings
-VITE_FIREBASE_API_KEY=
-VITE_FIREBASE_AUTH_DOMAIN=
-VITE_FIREBASE_PROJECT_ID=kula-pos
-VITE_FIREBASE_STORAGE_BUCKET=
-VITE_FIREBASE_MESSAGING_SENDER_ID=
-VITE_FIREBASE_APP_ID=
-VITE_FIREBASE_MEASUREMENT_ID=
+# Supabase Configuration
+# Get these from your Supabase Dashboard > Project Settings > API
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
