--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.19",
     "dexie": "^4.2.1",
+    "dotenv": "^17.2.3",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
     "jsbarcode": "^3.12.1",
