--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:staging": "bash scripts/build-staging.sh",
-    "build:production": "bash scripts/build-production.sh",
+    "build:staging": "vite build --mode staging",
+    "build:production": "vite build --mode production",
     "deploy:staging": "npm run build:staging && firebase deploy --only hosting --project kula-pos-staging",
     "deploy:production": "npm run build:production && firebase deploy --only hosting --project kula-pos",
     "lint": "eslint .",
@@ -62,7 +62,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "firebase-tools": "^14.26.0",
+    "firebase-admin": "^13.6.0",
     "globals": "^16.5.0",
     "jsdom": "^27.3.0",
     "postcss": "^8.5.6",
