fix(refund): remove cash_flow entry on refund to prevent double-counting
- Refund now only changes transaction status to 'refunded'
- Removed addCashMovement call in confirmRefund function
- Tutup Buku already excludes refunded transactions, so no need for separate cash outflow entry
- Cleaned up temporary migration scripts and debug files

--- a/firebase.json
+++ b/firebase.json
@@ -41,5 +41,9 @@
         ]
       }
     ]
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
