--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kula-pos",
   "private": true,
-  "version": "0.16.8",
+  "version": "0.16.9",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,7 @@
     "build:production": "vite build --mode production",
     "deploy:staging": "npm run build:staging && firebase deploy --only hosting --project kula-pos-staging",
     "deploy:production": "npm run build:production && firebase deploy --only hosting --project kula-pos",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "preview": "vite preview",
     "release": "node scripts/release.cjs",
     "test": "vitest"
@@ -60,6 +60,7 @@
     "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
