--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kula-pos",
   "private": true,
-  "version": "0.16.13",
+  "version": "0.16.14",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,6 +16,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
